--- a/src/less/pages/aboutUs.less
+++ b/src/less/pages/aboutUs.less
@@ -1,6 +1,5 @@
 @import "../lib-common";
 
-
 //主要内容组件样式
 .aboutUs-content {
   .pt(30px);
@@ -36,6 +35,7 @@
       }
     }
     & ~ p {
+      .fontSong;
       text-indent:2em;
       padding-bottom:15px;
     }
@@ -43,7 +43,8 @@
   strong.tip {
     .f14;
     .pos-r;
-    line-height:22px;
+    .mt(3px);
+    line-height:24px;
     display:inline-block;
     padding:0 5px;
     background-color:@base-color;
@@ -51,12 +52,12 @@
     &:after {
       content:"";
       .pos-a;
-      right:-22px;
+      right:-24px;
       top:0;
       width:0;
       height:0;
-      border-top:22px solid @base-color;
-      border-right:22px solid transparent;
+      border-top:24px solid @base-color;
+      border-right:24px solid transparent;
     }
   }
   &.grid-bg {
@@ -135,9 +136,11 @@
     }
     & > label {
       height:46px;
+      .text-right;
       i {
         .f10;
         .mb(5px);
+        .text-center;
         background-color:@red;
         color:@white;
         padding:3px;
@@ -177,8 +180,9 @@
           .f18;
         }
         p {
-          padding:5px 0;
+          .fontSong;
           .f14;
+          padding:5px 0;
         }
       }
     }
@@ -412,7 +416,7 @@
         width:30px;
         height:30px;
         border:none;
-        &:hover{
+        &:hover {
           opacity:.8;
         }
         &.prev {
