--- a/src/less/pages/index.less
+++ b/src/less/pages/index.less
@@ -69,8 +69,8 @@
       .pos-r;
       width:25%;
       .box {
-        .pl(20px);
-        .pr(20px);
+        .pl(15px);
+        .pr(15px);
         & > span:first-child {
           .m-auto(0, 0);
           box-sizing:border-box;
@@ -91,31 +91,45 @@
           .wrapper(30px, 30px);
           display:block;
         }
-        &>p{
+        & > p {
           .fontSong;
-          .m-auto(0,0);
-          width:238px;
         }
       }
       &:not(:last-of-type):after {
         .service-line(40px);
         right:0
       }
-      a:after,
+
+      a:after {
+        .after(100px, 100px);
+        border-radius:percentage(@half);
+        z-index:9;
+        background:red;
+        display:none;
+      }
+
       a:before {
         .after(56px, 56px);
+        z-index:99;
+      }
+
+      &:hover a {
+        &:after {
+          display:block;
+          -webkit-animation:bounceIn .5s .2s ease both;
+          -moz-animation:bounceIn .5s .2s ease both;
+        }
       }
       // 服务图标交互
-      &:hover a {
-        border-radius:percentage(@half);
-      }
       &:nth-of-type(1):hover {
         span:first-child {
           .border-base(#f6ab33);
         }
         a {
-          background-color:#f6ab33;
           &:after {
+            background-color:#f6ab33;
+          }
+          &:before {
             background:url("@{icon-1}") no-repeat -174px -94px;
           }
         }
@@ -125,8 +139,10 @@
           .border-base(#f3c600);
         }
         a {
-          background-color:#f3c600;
           &:after {
+            background-color:#f3c600;
+          }
+          &:before {
             background:url("@{icon-1}") no-repeat 0 -94px;
           }
         }
@@ -136,8 +152,10 @@
           .border-base(#4eba69);
         }
         a {
-          background-color:#4eba69;
           &:after {
+            background-color:#4eba69;
+          }
+          &:before {
             background:url("@{icon-1}") no-repeat -58px -94px;
           }
         }
@@ -147,8 +165,10 @@
           .border-base(#6bc5eb);
         }
         a {
-          background:#6bc5eb;
           &:after {
+            background:#6bc5eb;
+          }
+          &:before {
             background:url("@{icon-1}") no-repeat -116px -94px;
           }
         }
@@ -184,6 +204,23 @@
       vertical-align:middle;
       .response-img {
         height:100%;
+        -moz-transition:transform 0.6s ease 0s;
+        transition:transform 0.6s ease 0s;
+        transform:scale(1);
+        -webkit-transform:scale(1);
+        -moz-transform:scale(1);
+        -ms-transform:scale(1);
+        -o-transform:scale(1);
+        transition-timing-function:ease;
+      }
+      &:hover .response-img {
+        -moz-transition:transform 0.6s ease 0s;
+        transition:transform 0.6s ease 0s;
+        transform:scale(1.25);
+        -webkit-transform:scale(1.25);
+        -moz-transform:scale(1.25);
+        -ms-transform:scale(1.25);
+        -o-transform:scale(1.25);
       }
       .mask {
         .pos-a;
@@ -200,18 +237,20 @@
           display:block
         }
         & > label {
-          .mb(50px);
-          font-size:18px;
+          .mb(30px);
+          .f18;
+          font-weight:bold;
         }
         .text {
           width:percentage(@half*2);
           & > label {
             .text-center;
             font-size:22px;
+            .wrapper(10px, 10px);
           }
           & > p:first-of-type {
+            .fontSong;
             height:65px;
-            text-indent:2em;
             overflow:hidden;
             .ellipsis(3);
           }
@@ -330,6 +369,7 @@
         .ellipsis(2);
       }
       p {
+        .fontSong;
         font-size:12px;
         line-height:1.6;
       }
@@ -512,7 +552,9 @@
         }
         &:hover {
           span {
-            display:block
+            display:block;
+            -webkit-animation:flipInY 1s .2s ease both;
+            -moz-animation:flipInY 1s .2s ease both;
           }
         }
       }
