--- a/src/css/lib-public.css
+++ b/src/css/lib-public.css
@@ -139,14 +139,6 @@ img {
   -webkit-touch-callout: none;
   /* 禁止长按链接与图片弹出菜单 */
 }
-html,
-body {
-  -webkit-user-select: none;
-  /* 禁止选中文本（如无文本选中需求，此为必选项） */
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
 button,
 input,
 select,
@@ -221,13 +213,12 @@ body {
   -moz-font-feature-settings: "liga" on;
 }
 ::selection {
-  color: darkgrey;
+  color: #fff;
+  background-color: #da271b;
 }
 body {
   font-size: 16px;
-  font-family: "微软雅黑";
-  font-style: normal;
-  font-weight: normal;
+  font-family: "微软雅黑", sans-serif;
   color: #333333;
   line-height: 1.4;
   text-rendering: optimizeLegibility;
@@ -358,9 +349,7 @@ body {
 }
 /*TEXT STYLE*/
 .fontSong {
-  font-size: 16px;
-  font-family: "宋体", "微软雅黑", sans-serif;
-  color: #666;
+  font-family: "STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
 }
 .text-center {
   text-align: center;
@@ -443,6 +432,7 @@ body {
   color: #ffffff;
 }
 .wrap .title > p {
+  font-family: "STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
   text-align: center;
   padding-top: 20px;
 }
@@ -522,7 +512,6 @@ body {
 }
 #header #navBar .nav > li {
   position: relative;
-  text-align: center;
   margin-right: 5px;
 }
 #header #navBar .nav > li a {
@@ -531,9 +520,7 @@ body {
 }
 #header #navBar .nav > li h3 {
   font-size: 16px;
-  font-family: "微软雅黑";
-  font-style: normal;
-  font-weight: normal;
+  font-family: "微软雅黑", "PingFangSC-Regular";
 }
 #header #navBar .nav > li h3 a {
   position: relative;
@@ -561,6 +548,9 @@ body {
   width: 122px;
   left: -3px;
 }
+#header #navBar .nav > li h3.active a {
+  font-weight: bold;
+}
 #header #navBar .nav > li.double h3:hover a:after {
   width: 242px;
   left: -60px;
@@ -583,20 +573,22 @@ body {
   background: #ffffff;
 }
 #header #navBar .sub li {
-  margin-bottom: -1px;
   width: 120px;
   box-sizing: border-box;
 }
-#header #navBar .sub li a {
+#header #navBar .sub li > a {
   border-bottom: 1px solid #d7d7d7;
   line-height: 30px;
   padding: 8px;
 }
-#header #navBar .sub li a:hover {
+#header #navBar .sub li > a:hover {
   padding-left: 5px;
   margin-left: -1px;
   border-left: 3px solid #da271b;
   background: #f8f8f8;
+}
+#header #navBar .sub li:last-of-type > a {
+  border-bottom: none;
 }
 #main-footer {
   padding: 50px 0;
@@ -654,8 +646,8 @@ body {
 }
 #main-footer .btm-contact li {
   position: relative;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
   display: inline-block;
 }
 #main-footer .btm-contact li > a {
@@ -709,6 +701,7 @@ body {
   line-height: 40px;
   background-color: #d33331;
   top: -50px;
+  letter-spacing: 2px;
 }
 #main-footer .btm-contact li > span.tip:after {
   position: absolute;
@@ -818,6 +811,9 @@ body {
 #sideBar ul > li .qrImg img:only-child {
   display: block;
 }
+#sideBar ul > li:last-of-type {
+  display: none;
+}
 .sub-tabBar {
   height: 60px;
   line-height: 60px;
@@ -839,7 +835,7 @@ body {
 .sub-tabBar .currentMode > span {
   float: left;
   position: relative;
-  padding: 9px 0 9px 30px;
+  padding: 10px 0 10px 30px;
   line-height: 20px;
 }
 .sub-tabBar .currentMode > span:before {
@@ -860,6 +856,7 @@ body {
 .sub-tabBar .currentMode > span strong {
   font-size: 12px;
   display: block;
+  line-height: 24px;
   font-weight: normal;
 }
 .sub-tabBar .tab {
@@ -896,4 +893,68 @@ body {
 }
 .sub-tabBar .tab li.active {
   background-color: #d33331;
+}
+@-webkit-keyframes flipInY {
+  0% {
+    -webkit-transform: perspective(400px) rotateY(360deg);
+    opacity: 0;
+  }
+  40% {
+    -webkit-transform: perspective(400px) rotateY(-10deg);
+  }
+  70% {
+    -webkit-transform: perspective(400px) rotateY(10deg);
+  }
+  100% {
+    -webkit-transform: perspective(400px) rotateY(0deg);
+    opacity: 1;
+  }
+}
+@-moz-keyframes flipInY {
+  0% {
+    -moz-transform: perspective(400px) rotateY(90deg);
+    opacity: 0;
+  }
+  40% {
+    -moz-transform: perspective(400px) rotateY(-10deg);
+  }
+  70% {
+    -moz-transform: perspective(400px) rotateY(10deg);
+  }
+  100% {
+    -moz-transform: perspective(400px) rotateY(0deg);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes bounceIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale(0.3);
+  }
+  50% {
+    opacity: 1;
+    -webkit-transform: scale(1.05);
+  }
+  70% {
+    -webkit-transform: scale(0.9);
+  }
+  100% {
+    -webkit-transform: scale(1);
+  }
+}
+@-moz-keyframes bounceIn {
+  0% {
+    opacity: 0;
+    -moz-transform: scale(0.3);
+  }
+  50% {
+    opacity: 1;
+    -moz-transform: scale(1.05);
+  }
+  70% {
+    -moz-transform: scale(0.9);
+  }
+  100% {
+    -moz-transform: scale(1);
+  }
 }
