--- a/src/less/lib-public.less
+++ b/src/less/lib-public.less
@@ -29,14 +29,14 @@
     line-height:100px;
     .nav > li {
       .pos-r;
-      .text-center;
       .mr(5px);
       a {
         color:@base-color;
         display:block;
       }
       h3 {
-        .font(16px, "微软雅黑", normal);
+        .f16;
+        font-family:"微软雅黑", "PingFangSC-Regular";
         a {
           .pos-r;
           width:120px;
@@ -55,6 +55,9 @@
         &:hover a:after {
           width:122px;
           left:-3px;
+        }
+        &.active a {
+          font-weight:bold;
         }
       }
       &.double {
@@ -84,10 +87,9 @@
       width:120px;
       background:@white;
       li {
-        .mb(-1px);
         width:120px;
         box-sizing:border-box;
-        a {
+        & > a {
           .border-bottom-base(#d7d7d7);
           line-height:30px;
           padding:8px;
@@ -97,6 +99,9 @@
             border-left:3px solid #da271b;
             background:#f8f8f8;
           }
+        }
+        &:last-of-type > a {
+          border-bottom:none;
         }
       }
     }
@@ -139,8 +144,8 @@
     .pb(50px);
     li {
       .pos-r;
-      .ml(30px);
-      .mr(30px);
+      .ml(20px);
+      .mr(20px);
       display:inline-block;
       & > a {
         .pl(30px);
@@ -184,6 +189,7 @@
           line-height:40px;
           background-color:@red;
           top:-50px;
+          letter-spacing:2px;
           &:after {
             .pos-a;
             content:"";
@@ -202,7 +208,7 @@
           top:-90px;
         }
       }
-      &:hover span{
+      &:hover span {
         .block;
       }
     }
@@ -272,6 +278,9 @@
         display:block;
       }
     }
+    &:last-of-type {
+      display:none;
+    }
   }
 }
 
@@ -295,7 +304,7 @@
     & > span {
       .fl;
       .pos-r;
-      padding:9px 0 9px 30px;
+      padding:10px 0 10px 30px;
       line-height:20px;
       &:before {
         .before(4px, 4px);
@@ -308,6 +317,7 @@
       strong {
         .f12;
         .block;
+        line-height:24px;
         font-weight:normal;
       }
     }
@@ -331,5 +341,75 @@
         background-color:@red;
       }
     }
+  }
+}
+
+//Animate
+
+@-webkit-keyframes flipInY {
+  0% {
+    -webkit-transform:perspective(400px) rotateY(360deg);
+    opacity:0
+  }
+  40% {
+    -webkit-transform:perspective(400px) rotateY(-10deg)
+  }
+  70% {
+    -webkit-transform:perspective(400px) rotateY(10deg)
+  }
+  100% {
+    -webkit-transform:perspective(400px) rotateY(0deg);
+    opacity:1
+  }
+}
+
+@-moz-keyframes flipInY {
+  0% {
+    -moz-transform:perspective(400px) rotateY(90deg);
+    opacity:0
+  }
+  40% {
+    -moz-transform:perspective(400px) rotateY(-10deg)
+  }
+  70% {
+    -moz-transform:perspective(400px) rotateY(10deg)
+  }
+  100% {
+    -moz-transform:perspective(400px) rotateY(0deg);
+    opacity:1
+  }
+}
+
+@-webkit-keyframes bounceIn {
+  0% {
+    opacity:0;
+    -webkit-transform:scale(.3)
+  }
+  50% {
+    opacity:1;
+    -webkit-transform:scale(1.05)
+  }
+  70% {
+    -webkit-transform:scale(.9)
+  }
+  100% {
+    -webkit-transform:scale(1)
+  }
+}
+
+@-moz-keyframes bounceIn {
+  0% {
+    opacity:0;
+    -moz-transform:scale(.3)
+  }
+  50% {
+    opacity:1;
+    -moz-transform:scale(1.05)
+  }
+  70% {
+    -moz-transform:scale(.9)
+  }
+  100% {
+    -moz-transform:scale(1)
   }
 }
