--- a/src/less/lib-reset.less
+++ b/src/less/lib-reset.less
@@ -101,11 +101,11 @@ a, img {
 }
 
 html, body {
-  -webkit-user-select:none;
-  /* 禁止选中文本（如无文本选中需求，此为必选项） */
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none;
+  //-webkit-user-select:none;
+  ///* 禁止选中文本（如无文本选中需求，此为必选项） */
+  //-moz-user-select:none;
+  //-ms-user-select:none;
+  //user-select:none;
 }
 
 button, input, select, textarea {
@@ -186,5 +186,6 @@ body {
 }
 
 ::selection {
-  color:darkgrey;
+  color:#fff;
+  background-color:#da271b;
 }
