--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -589,6 +589,7 @@ p,
 }
 #service .service-list li .box > p {
   font-family: "STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
+  text-align: center;
 }
 #service .service-list li:not(:last-of-type):after {
   content: "";
