--- a/src/less/lib-public.less
+++ b/src/less/lib-public.less
@@ -110,7 +110,7 @@
 
 // Footer
 #main-footer {
-  padding:50px 0;
+  .wrapper(50px,30px);
   color:@white;
   background:#3d3d3d;
   height:auto;
@@ -141,7 +141,7 @@
   .btm-contact {
     .text-center;
     .pt(50px);
-    .pb(50px);
+    .pb(30px);
     li {
       .pos-r;
       .ml(20px);
