--- a/src/css/pages/servicePro.css
+++ b/src/css/pages/servicePro.css
@@ -757,9 +757,12 @@ p,
 .service-value .box2 figure:first-child {
   position: absolute;
   width: 440px;
-  height: 130px;
+  height: auto;
   top: 130px;
   right: 120px;
+}
+.service-value .box2 figure:first-child > h3 {
+  margin-bottom: 20px;
 }
 .service-value .box2 ul {
   height: 650px;
@@ -836,7 +839,7 @@ p,
   position: relative;
   height: 350px;
   padding: 50px 0;
-  margin-top: 100px;
+  margin-top: 60px;
   background: url("../img/bground/advantageBg.png") no-repeat center;
 }
 .service-ads .box > figure {
