底部图标划过溢出显示

--- a/src/less/lib-public.less
+++ b/src/less/lib-public.less
@@ -140,9 +140,9 @@
   //关注渠道
   .btm-contact {
     .text-center;
+    height:auto;
     .pt(50px);
     .pb(30px);
-    .h-auto;
     li {
       .pos-r;
       .ml(20px);
