--- a/src/css/lib-public.css
+++ b/src/css/lib-public.css
@@ -480,13 +480,15 @@ p,
 #header #logo {
   float: left;
   padding-left: 35px;
-  padding-top: 15px;
+  padding-top: 25px;
 }
 #header #logo a {
-  display: block;
+  display: table-cell;
+  vertical-align: middle;
 }
 #header #logo a ins {
   text-indent: -99999px;
+  height: 0;
   display: inline-block;
 }
 #header #navBar {
@@ -550,7 +552,7 @@ p,
   left: -3px;
 }
 #header #navBar .nav > li h3.active a {
-  font-weight: bold;
+  font-weight: 600;
 }
 #header #navBar .nav > li.double h3:hover a:after {
   width: 242px;
@@ -792,13 +794,14 @@ p,
   position: absolute;
   text-align: center;
   display: none;
+  letter-spacing: 2px;
   top: 0;
   background-color: #d33331;
   color: #ffffff;
-  width: 200px;
+  width: 160px;
   height: 50px;
   line-height: 50px;
-  left: -200px;
+  left: -160px;
 }
 #sideBar ul > li span > a:only-of-type {
   display: block;
@@ -814,7 +817,7 @@ p,
   width: 30px;
   height: 30px;
   z-index: 99;
-  left: 60px;
+  left: 30px;
 }
 #sideBar ul > li span.icon-tel {
   text-indent: 40px;
@@ -827,7 +830,7 @@ p,
   width: 118px;
   height: 118px;
   right: -200px;
-  top: 0;
+  top: -68px;
 }
 #sideBar ul > li .qrImg img:only-child {
   display: block;
