--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -575,7 +575,7 @@ p,
   height: 120px;
 }
 #service .service-list li .box > span:first-child > a {
-  margin: 0 auto 0 auto;
+  margin: -1px auto 0 auto;
   position: relative;
   display: block;
   width: 100px;
@@ -666,108 +666,8 @@ p,
 #service .service-list li:nth-of-type(4):hover a:before {
   background: url("../img/icon-1.png") no-repeat -116px -94px;
 }
-#project .project-list {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  height: auto;
-  overflow: hidden;
-  width: 100%;
-  display: table;
-}
-#project .project-list > .lt,
-#project .project-list > .rt {
-  display: table-cell;
-  vertical-align: middle;
-}
-#project .project-list > ul {
-  display: table-row;
-}
-#project .project-list li {
-  position: relative;
-  width: 20%;
-  height: 300px;
-  max-height: 300px;
-  overflow: hidden;
-  display: table-cell;
-  vertical-align: middle;
-}
-#project .project-list li .response-img {
-  height: 100%;
-  -moz-transition: transform 0.6s ease 0s;
-  transition: transform 0.6s ease 0s;
-  transform: scale(1);
-  -webkit-transform: scale(1);
-  -moz-transform: scale(1);
-  -ms-transform: scale(1);
-  -o-transform: scale(1);
-  transition-timing-function: ease;
-}
-#project .project-list li:hover .response-img {
-  -moz-transition: transform 0.6s ease 0s;
-  transition: transform 0.6s ease 0s;
-  transform: scale(1.25);
-  -webkit-transform: scale(1.25);
-  -moz-transform: scale(1.25);
-  -ms-transform: scale(1.25);
-  -o-transform: scale(1.25);
-}
-#project .project-list li .mask {
-  position: absolute;
-  display: none;
-  color: #ffffff;
-  padding: 20px 30px;
-  box-sizing: border-box;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.7);
-  width: 100%;
-  height: 100%;
-}
-#project .project-list li .mask label {
-  display: block;
-}
-#project .project-list li .mask > label {
-  margin-bottom: 30px;
-  font-size: 18px;
-  font-weight: bold;
-}
-#project .project-list li .mask .text {
-  width: 100%;
-}
-#project .project-list li .mask .text > label {
-  text-align: center;
-  font-size: 22px;
-  padding: 10px 0 10px 0;
-  height: auto;
-  overflow: hidden;
-}
-#project .project-list li .mask .text > p:first-of-type {
-  font-family: "STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
-  height: 65px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-}
-#project .project-list li .mask .text > .link {
-  position: absolute;
-  text-align: right;
-  width: 100%;
-  height: 28px;
-  left: 0;
-  right: 30px;
-  bottom: 30px;
-}
-#project .project-list li .mask .text > .link a {
-  width: 28px;
-  height: 28px;
-  margin-right: 30px;
-  display: inline-block;
-  background: url("../img/icon-1.png") no-repeat -203px -210px;
-}
 #news {
-  background-color: #f8f8f8;
+  background-color: #ffffff;
 }
 #news .tab-control {
   width: 560px;
@@ -956,6 +856,109 @@ p,
 }
 #news .tab-content ul.item6 .viewImg {
   width: 64px;
+}
+#project {
+  background-color: #f8f8f8;
+}
+#project .project-list {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  height: auto;
+  overflow: hidden;
+  width: 100%;
+  display: table;
+}
+#project .project-list > .lt,
+#project .project-list > .rt {
+  display: table-cell;
+  vertical-align: middle;
+}
+#project .project-list > ul {
+  display: table-row;
+}
+#project .project-list li {
+  position: relative;
+  width: 20%;
+  height: 300px;
+  max-height: 300px;
+  overflow: hidden;
+  display: table-cell;
+  vertical-align: middle;
+}
+#project .project-list li .response-img {
+  height: 100%;
+  -moz-transition: transform 0.6s ease 0s;
+  transition: transform 0.6s ease 0s;
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transition-timing-function: ease;
+}
+#project .project-list li:hover .response-img {
+  -moz-transition: transform 0.6s ease 0s;
+  transition: transform 0.6s ease 0s;
+  transform: scale(1.25);
+  -webkit-transform: scale(1.25);
+  -moz-transform: scale(1.25);
+  -ms-transform: scale(1.25);
+  -o-transform: scale(1.25);
+}
+#project .project-list li .mask {
+  position: absolute;
+  display: none;
+  color: #ffffff;
+  padding: 20px 30px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+}
+#project .project-list li .mask label {
+  display: block;
+}
+#project .project-list li .mask > label {
+  margin-bottom: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+#project .project-list li .mask .text {
+  width: 100%;
+}
+#project .project-list li .mask .text > label {
+  text-align: center;
+  font-size: 22px;
+  padding: 10px 0 10px 0;
+  height: auto;
+  overflow: hidden;
+}
+#project .project-list li .mask .text > p:first-of-type {
+  font-family: "STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
+  height: 65px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+#project .project-list li .mask .text > .link {
+  position: absolute;
+  text-align: right;
+  width: 100%;
+  height: 28px;
+  left: 0;
+  right: 30px;
+  bottom: 30px;
+}
+#project .project-list li .mask .text > .link a {
+  width: 28px;
+  height: 28px;
+  margin-right: 30px;
+  display: inline-block;
+  background: url("../img/icon-1.png") no-repeat -203px -210px;
 }
 #aboutUs {
   background-color: #cbb7a2;
