--- a/src/less/lib-public.less
+++ b/src/less/lib-public.less
@@ -10,11 +10,13 @@
   #logo {
     .fl;
     .pl(35px);
-    .pt(15px);
+    .pt(25px);
     a {
-      display:block;
+      display:table-cell;
+      vertical-align:middle;
       ins {
         text-indent:-99999px;
+        height:0;
         display:inline-block
       }
     }
@@ -57,7 +59,7 @@
           left:-3px;
         }
         &.active a {
-          font-weight:bold;
+          font-weight:600;
         }
       }
       &.double {
@@ -110,7 +112,7 @@
 
 // Footer
 #main-footer {
-  .wrapper(50px,30px);
+  .wrapper(50px, 30px);
   color:@white;
   background:#3d3d3d;
   height:auto;
@@ -148,7 +150,7 @@
       .ml(20px);
       .mr(20px);
       display:inline-block;
-      &:first-of-type{
+      &:first-of-type {
         .pl(10px);
       }
       & > a {
@@ -258,13 +260,14 @@
       .pos-a;
       .text-center;
       .hide;
+      letter-spacing:2px;
       top:0;
       background-color:@red;
       color:@white;
-      width:200px;
+      width:160px;
       height:50px;
       line-height:50px;
-      left:-200px;
+      left:-160px;
       & > a:only-of-type {
         display:block;
         color:@white;
@@ -272,7 +275,7 @@
       &:before {
         .before(30px, 30px);
         z-index:99;
-        left:60px;
+        left:30px;
       }
       &.icon-tel {
         text-indent:40px;
@@ -286,7 +289,7 @@
       width:118px;
       height:118px;
       right:-200px;
-      top:0;
+      top:-68px;
       img:only-child {
         display:block;
       }
