文案与图片修改
1.首页焦点图
2.其它页面局部文案

--- a/src/less/pages/index.less
+++ b/src/less/pages/index.less
@@ -21,7 +21,7 @@
       height:10px;
       margin:0 4px;
       text-indent:-999em;
-      border:2px solid @white;
+      border:2px solid @red;
       border-radius:percentage(@half);
       cursor:pointer;
       opacity:@half;
