--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -490,7 +490,7 @@ p,
   height: 10px;
   margin: 0 4px;
   text-indent: -999em;
-  border: 2px solid #ffffff;
+  border: 2px solid #d33331;
   border-radius: 50%;
   cursor: pointer;
   opacity: 0.5;
