--- a/src/less/lib-common.less
+++ b/src/less/lib-common.less
@@ -26,6 +26,7 @@ body {
 @icon-6:"../img/icon-6.png";
 @icon-7:"../img/icon-7.png";
 @icon-8:"../img/icon-8.png";
+@icon-arr:"../img/icon-arr.png";
 
 .response-img {
   max-width:100%;
@@ -294,9 +295,12 @@ body {
   font-weight:@weight;
 }
 
-p,
+p{
+  .fontSong;
+}
 .fontSong {
   font-family:"STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
+  line-height:1.6;
 }
 
 .text-center {
