--- a/src/less/pages/aboutUs.less
+++ b/src/less/pages/aboutUs.less
@@ -116,7 +116,7 @@
       p:last-of-type {
         .pl(110px);
         .pt(30px);
-        &>i{
+        & > i {
           color:@red;
         }
       }
@@ -436,3 +436,116 @@
   }
 }
 
+//团队照片墙
+.team-pic-wrap {
+  width:1155px;
+  height:825px;
+  .m-auto(0, 0);
+  .pos-r;
+  .pb(100px);
+  overflow:visible;
+  .arrow {
+    background:url("@{icon-1}") no-repeat;
+    cursor:pointer;
+    .after(26px, 52px);
+    .mt(-60px);
+    &.prev {
+      left:-50px;
+      background-position:-260px -148px;
+      &:hover {
+        background-position:-260px -94px;
+      }
+    }
+    &.next {
+      left:auto;
+      right:-50px;
+      background-position:-232px -148px;
+      &:hover {
+        background-position:-232px -94px;
+      }
+    }
+  }
+}
+
+#team-pic-wall {
+  background:#efefef;
+  overflow:hidden;
+  ul {
+    width:1155px;
+    height:825px;
+    overflow:hidden;
+    & > li {
+      .clearfix;
+      width:inherit;
+      height:inherit;
+      overflow:hidden;
+      & > section {
+        .fl;
+        box-sizing:border-box;
+        border:1px solid @white;
+        width:14.285%;
+        height:165px;
+        &.text {
+          .pos-r;
+          padding:15px;
+          opacity:0;
+          &:hover {
+            //opacity:1;
+          }
+          &:before {
+            background-image:url("@{icon-arr}");
+          }
+          &.arr-top:before,
+          &.arr-btm:before {
+            content:"";
+            .after(32px, 16px);
+            .pos-a;
+          }
+          &.arr-left:before,
+          &.arr-right:before {
+            content:"";
+            .after(16px, 32px);
+            .pos-a;
+          }
+          &.arr-top:before { //上箭头
+            top:-8px;
+            background-position:-32px -8px;
+          }
+          &.arr-btm:before { //下箭头
+            top:auto;
+            bottom:-16px;
+            background-position:-64px -8px;
+          }
+          &.arr-left:before { //左箭头
+            left:-8px;
+            background-position:0;
+          }
+          &.arr-right:before { //右箭头
+            background-position:-16px 0;
+            left:auto;
+            right:-16px;
+          }
+          & > label {
+            .f18;
+            .block;
+          }
+          & > p {
+            .f14;
+            .wrapper(15px, 5px);
+            height:57px;
+            overflow:hidden;
+            .ellipsis(3);
+            & + i {
+              .pos-a;
+              bottom:10px;
+              right:15px;
+            }
+          }
+        }
+        & > img {
+          height:inherit;
+        }
+      }
+    }
+  }
+}
