--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -476,7 +476,54 @@ p {
 .slider ul:first-child > li img {
   display: block;
 }
-.slider .dots {
+.focusWrap {
+  position: relative;
+  padding: 0;
+}
+.focusWrap > #focus {
+  height: auto;
+  overflow: hidden;
+  max-height: 580px;
+  width: 100%;
+}
+.focusWrap > #focus a {
+  display: block;
+}
+.focusWrap > #focus a img {
+  max-width: 100%;
+}
+.centered-btns_nav {
+  display: none;
+  position: absolute;
+  content: "";
+  margin-top: -60px;
+  margin-left: -30px;
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 120px;
+  margin-left: 0;
+  z-index: 2;
+  background: url("../img//slider-arr.png") no-repeat rgba(0, 0, 0, 0.24);
+  text-indent: -9999em;
+  overflow: hidden;
+  opacity: .7;
+}
+.centered-btns_nav:active {
+  opacity: 1;
+}
+.centered-btns_nav.prev {
+  left: 0;
+  background-position: 0 center;
+}
+.centered-btns_nav.next {
+  left: auto;
+  right: 0;
+  background-position: -60px center;
+}
+.centered-btns_tabs {
+  font-size: 0;
+  z-index: 999;
   position: absolute;
   content: "";
   margin-top: -10px;
@@ -489,7 +536,13 @@ p {
   top: auto;
   bottom: 20px;
 }
-.slider .dots li {
+.centered-btns_tabs > li {
+  display: inline-block;
+  margin: 0 3px;
+  *display: inline;
+  *zoom: 1;
+}
+.centered-btns_tabs > li > a {
   display: inline-block;
   width: 10px;
   height: 10px;
@@ -502,23 +555,10 @@ p {
   -webkit-transition: background .5s, opacity .5s;
   transition: background .5s, opacity .5s;
 }
-.slider .dots li.active {
+.centered-btns_tabs > li.centered-btns_here a {
   border-color: #d33331;
   background: #d33331;
   opacity: 1;
-}
-#slider {
-  max-height: 580px;
-  overflow: hidden;
-}
-#slider.slider {
-  width: 100%;
-}
-#slider.slider a {
-  display: block;
-}
-#slider.slider a img {
-  max-width: 100%;
 }
 #service {
   background-color: #f8f8f8;
@@ -581,6 +621,7 @@ p {
 }
 #service .service-list li .box > span:first-child > a {
   margin: -1px auto 0 auto;
+  margin-left: -1px;
   position: relative;
   display: block;
   width: 100px;
@@ -685,7 +726,7 @@ p {
 #news .tab-control dl,
 #news .tab-control li {
   float: none;
-  margin-right: 75px;
+  margin-right: 0;
 }
 #news .tab-control:before {
   content: '';
@@ -701,6 +742,7 @@ p {
   text-align: center;
 }
 #news .tab-control ul li {
+  margin: 0 35px;
   background: #ffffff;
   padding: 6px 10px;
   display: inline-block;
@@ -885,13 +927,14 @@ p {
 #project .project-list li {
   position: relative;
   width: 20%;
-  height: 300px;
+  height: auto;
   max-height: 300px;
   overflow: hidden;
   display: table-cell;
   vertical-align: middle;
 }
 #project .project-list li .response-img {
+  width: 100%;
   height: 100%;
   -moz-transition: transform 0.6s ease 0s;
   transition: transform 0.6s ease 0s;
@@ -944,7 +987,7 @@ p {
 #project .project-list li .mask .text > p:first-of-type {
   font-family: "STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
   line-height: 1.6;
-  height: 65px;
+  height: 72px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
