--- a/src/less/pages/index.less
+++ b/src/less/pages/index.less
@@ -10,12 +10,62 @@
       display:block
     }
   }
-  .dots {
-    .after(50%, 20px);
-    text-align:center;
-    top:auto;
-    bottom:20px;
-    li {
+}
+
+.focusWrap {
+  .pos-r;
+  padding:0;
+  & > #focus {
+    .h-auto;
+    max-height:580px;
+    width:100%;
+    a {
+      display:block;
+      img {
+        max-width:100%;
+      }
+    }
+  }
+}
+
+//前进后退
+.centered-btns_nav {
+  .hide;
+  .after(60px, 120px);
+  .ml(0);
+  z-index:2;
+  background:url("@{images}/slider-arr.png") no-repeat rgba(0, 0, 0, .24);
+  text-indent:-9999em;
+  overflow:hidden;
+  opacity:.7;
+  &:active {
+    opacity:1;
+  }
+  &.prev {
+    left:0;
+    background-position:0 center;
+  }
+  &.next {
+    left:auto;
+    right:0;
+    background-position:-60px center;
+  }
+}
+
+//导航器
+.centered-btns_tabs {
+  font-size:0;
+  z-index:999;
+  .after(50%, 20px);
+  text-align:center;
+  top:auto;
+  bottom:20px;
+  & > li {
+    display:inline-block;
+    margin:0 3px;
+    *display:inline;
+    *zoom:1;
+    & > a {
       display:inline-block;
       width:10px;
       height:10px;
@@ -27,25 +77,11 @@
       opacity:@half;
       -webkit-transition:background .5s, opacity .5s;
       transition:background .5s, opacity .5s;
-      &.active {
-        border-color:@red;
-        background:@red;
-        opacity:1;
-      }
     }
-  }
-}
-
-#slider {
-  max-height:580px;
-  overflow:hidden;
-  &.slider {
-    width:100%;
-    a {
-      display:block;
-      img {
-        max-width:100%;
-      }
+    &.centered-btns_here a {
+      border-color:@red;
+      background:@red;
+      opacity:1;
     }
   }
 }
@@ -81,6 +117,7 @@
           height:120px;
           & > a {
             .m-auto(-1px, 0);
+            .ml(-1px);
             .pos-r;
             display:block;
             width:100px;
@@ -194,11 +231,12 @@
     width:560px;
     .m-auto(20px, auto);
     .h-auto;
-    .list-inline(none, 75px);
+    .list-inline(none, 0);
     ul {
       padding-left:30px;
       .text-center;
       li {
+        margin:0 35px;
         background:@white;
         padding:6px 10px;
         display:inline-block;
@@ -356,12 +394,13 @@
     li {
       .pos-r;
       width:percentage(0.2);
-      height:300px;
+      height:auto;
       max-height:300px;
       overflow:hidden;
       display:table-cell;
       vertical-align:middle;
       .response-img {
+        width:100%;
         height:100%;
         -moz-transition:transform 0.6s ease 0s;
         transition:transform 0.6s ease 0s;
@@ -401,7 +440,7 @@
           font-weight:bold;
         }
         .text {
-          width:percentage(@half*2);
+          width:percentage(@whole);
           & > label {
             .text-center;
             font-size:22px;
@@ -409,7 +448,7 @@
           }
           & > p:first-of-type {
             .fontSong;
-            height:65px;
+            height:72px;
             overflow:hidden;
             .ellipsis(3);
           }
