--- a/src/less/pages/servicePro.less
+++ b/src/less/pages/servicePro.less
@@ -10,6 +10,9 @@
 
 //当前服务项目
 #service-current {
+  &.wrap{
+    padding: 50px 0 80px 0;
+  }
   .pb(50px);
   & > .title figcaption h3 {
     width:100%;
