--- a/src/less/pages/aboutUs.less
+++ b/src/less/pages/aboutUs.less
@@ -176,6 +176,7 @@
   table {
     td {
       color:@white;
+      border:dotted @white 1px ;
       img:only-child {
         .block;
       }
@@ -204,13 +205,16 @@
       }
       & + tr {
         td {
+          width:195px;
           &:nth-of-type(1) {
+            width:97.5px+195px;
             background-color:rgba(132, 120, 110, 1);
           }
           &:nth-of-type(3) {
             background-color:rgba(142, 142, 142, 1);
           }
           &:nth-of-type(5) {
+            width:97.5px+195px;
             background-color:rgba(73, 92, 96, 1);
           }
         }
